--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#2B2C2F</color>
+    <color name="colorPrimaryDark">#1D1E20</color>
+    <color name="colorAccent">#e23636</color>
+    <color name="colorPrimaryLight">#ACB1BD</color>
+    <color name="colorDetail">#80FFFFFF</color>
+    <color name="gray">#504a4a</color>
+    <color name="blue">#518cca</color>
+    <color name="p_grey_new_lighter">#EFE9E5</color>
+    <color name="whiteOpacity">#FFFFFE</color>
+    <color name="gray_DFDCD9">#DFDCD9</color>
 </resources>
